reach changing slot

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -104,7 +104,7 @@
             <div class="spotifyplaylists">
                 <h1> Spotify Playlists</h1>
                 <div class="cardcontainer">
-                    <div class="card ">
+                    <div data-folder="cs"class="card ">
                         <div class="play invert">
                             <img src="play-button.png" alt="">
                         </div>
@@ -112,7 +112,7 @@
                         <h2>Sapphire</h2>
                         <p>Hits to boost your mood and fill you with happiness</p>
                     </div>
-                    <div class="card ">
+                    <div data-folder="ncs" class="card ">
                         <div class="play invert">
                             <img src="play-button.png" alt="">
                         </div>
