--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -104,7 +104,9 @@
             <div class="spotifyplaylists">
                 <h1> Spotify Playlists</h1>
                 <div class="cardcontainer">
-                    <div data-folder="cs"class="card ">
+
+                    <!-- ab ye card contaner epty rhega taki js se ditect folder banake card bane  -->
+                    <!-- <div data-folder="cs"class="card ">
                         <div class="play invert">
                             <img src="play-button.png" alt="">
                         </div>
@@ -119,7 +121,7 @@
                         <img src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" alt="">
                         <h2>Sapphire</h2>
                         <p>Hits to boost your mood and fill you with happiness</p>
-                    </div>
+                    </div> -->
 
 
 
